; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_list-device.c_fz_list_render_flags.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_list-device.c_fz_list_render_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FZ_DEVFLAG_GRIDFIT_AS_TILED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"Unsupported flags combination\00", align 1
@FZ_CMD_RENDER_FLAGS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32, i32)* @fz_list_render_flags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fz_list_render_flags(i32* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %7, align 4
  %11 = load i32, i32* @FZ_DEVFLAG_GRIDFIT_AS_TILED, align 4
  %12 = icmp eq i32 %10, %11
  br i1 %12, label %13, label %17

13:                                               ; preds = %4
  %14 = load i32, i32* %8, align 4
  %15 = icmp eq i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %13
  store i32 1, i32* %9, align 4
  br label %28

17:                                               ; preds = %13, %4
  %18 = load i32, i32* %7, align 4
  %19 = icmp eq i32 %18, 0
  br i1 %19, label %20, label %25

20:                                               ; preds = %17
  %21 = load i32, i32* %8, align 4
  %22 = load i32, i32* @FZ_DEVFLAG_GRIDFIT_AS_TILED, align 4
  %23 = icmp eq i32 %21, %22
  br i1 %23, label %24, label %25

24:                                               ; preds = %20
  store i32 0, i32* %9, align 4
  br label %27

25:                                               ; preds = %20, %17
  %26 = call i32 @assert(i32 0)
  br label %34

27:                                               ; preds = %24
  br label %28

28:                                               ; preds = %27, %16
  %29 = load i32*, i32** %5, align 8
  %30 = load i32*, i32** %6, align 8
  %31 = load i32, i32* @FZ_CMD_RENDER_FLAGS, align 4
  %32 = load i32, i32* %9, align 4
  %33 = call i32 @fz_append_display_node(i32* %29, i32* %30, i32 %31, i32 %32, i32* null, i32* null, i32* null, i32* null, i32* null, i32* null, i32* null, i32* null, i32 0)
  br label %34

34:                                               ; preds = %28, %25
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @fz_append_display_node(i32*, i32*, i32, i32, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
